--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
 0.01    2005-04-10
 
   - Initial version.
+
+0.02    2006-06-21
+
+  - Cleaned up documentation a little.
+  - Fixed some regression tests.
