Import of DWRIGHT/DBD-Multi-0.03 from CPAN.
gitpan-cpan-distribution: DBD-Multi
gitpan-cpan-version:      0.03
gitpan-cpan-path:         DWRIGHT/DBD-Multi-0.03.tar.gz
gitpan-cpan-author:       DWRIGHT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -6,3 +6,7 @@
 
   - Cleaned up documentation a little.
   - Fixed some regression tests.
+
+0.03    2007-01-08
+
+  - Regression tests to verify random selection works, submitted by MARKSTOS@cpan.org
