Import of DWRIGHT/DBD-Multi-0.13 from CPAN.
gitpan-cpan-distribution: DBD-Multi
gitpan-cpan-version:      0.13
gitpan-cpan-path:         DWRIGHT/DBD-Multi-0.13.tar.gz
gitpan-cpan-author:       DWRIGHT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.13    2008-02-20
+
+  - Added support for DBI_AUTOPROXY environment variable.  Suggested by 
+    Tim Bunce.  (RT #30250)
+
 0.12    2007-08-28
 
   - Added dependency listing for DBI to the Makefile to try and satisfy cpan
