Import of DWRIGHT/DBD-Multi-0.16 from CPAN.
gitpan-cpan-distribution: DBD-Multi
gitpan-cpan-version:      0.16
gitpan-cpan-path:         DWRIGHT/DBD-Multi-0.16.tar.gz
gitpan-cpan-author:       DWRIGHT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.16    2010-09-05
+
+  - No longer derived from DBD::File.   Fixes compatability issues with DBI
+    versions between 1.611_90 and 1.614.  (RT #60193)
+
 0.15    2010-07-15
 
   - Catch error when a coderef datasource fails to connect to the database
