--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+0.18    2013-04-09
+
+  - Added get_info() patch from Jon Isbell (RT #84240)
+
+0.17    2011-03-08
+
+  - New regression test verifying that previously failed databases are
+    eventually re-tried.  
+
 0.16    2010-09-05
 
   - No longer derived from DBD::File.   Fixes compatability issues with DBI
